Fix featured image on iPhone 6
Issue #27

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -2498,6 +2498,14 @@ div {
     }
 }
 
+.is_iphone.v_8 {
+    #bg-header .full-width {
+        height: 100%;
+        width: auto !important;
+        max-width: none !important;
+    }
+}
+
 .total {
     background-color: @bodyBackground;
 }
